    - Add link to PKS status page. LP: #1075391
  * mgo/keystats.go:
    - Add map-reduce to calculate hourly and daily totals of
      key creation and modification. LP: #1075391
  * cmd/hockeypuck-mgo/main.go, mgo/client.go, mgo/keystats.go,
    mgo/worker.go, status_types.go, www/templates/pks/status.tmpl:
    - Integrate key stats into op=status page, MR, query fixes.
      LP: #1075391

 -- Casey Marshall <casey.marshall@gazzang.com>  Sun, 02 Dec 2012 21:56:19 -0600

hockeypuck (0.6) precise; urgency=low

  [ Casey Marshall ]
  * Opening 0.6 milestone.
  * mgo/worker.go:
    - Fix keyword query iteration. Need to keep allocating new PubKeys,
      was overwriting the same one in the iter loop.
      LP: #1073786
  * cmd/hockeypuck-load/main.go, pgp_types.go, responses.go,
    www/templates/pks/index.tmpl:
    - Display user attribute image subpacket in index templates. LP: #1044773
  * responses.go, www/templates/pks/index.tmpl:
    - Display QR code of public key fingerprint. LP: #1074552
  * www/css/hkp.css, www/templates/header.tmpl:
    - Make logo heading a link.
  * debian/mkdists, debian/rules, Makefile:
    - Remove hockeypuck-pq from binary packages, its not ready for that.
    - Add helper script for slinging multi-distro source packages.
  * cmd/hockeypuck-load/main.go:
    - Add hockeypuck -mail-add option for receiving PKS inbound keys.
      LP: #1075379
  * debian/rules, Makefile:
    - Use the binary targets to get dependencies, use go install
      to build them into local gopath/bin. Simplifies Makefile.
  * mgo/worker.go, pq/worker.go, responses.go, server.go, templates.go,
    worker.go, www/templates/header.tmpl:
    - Create form to add pasted key armor. LP: #1076841
    - /pks/add produces an HTML page confirming added key fingerprints.
    - Clean up ws, cruft.
  * mgo/worker.go, pgp_types.go:
    - Add Ctime & Mtime for status page. LP: #1075391
  * === added directory etc/hockeypuck, cli/cli.go, cmd/hockeypuck-