@@ -1,7 +1,7 @@
 gopath/bin/hockeypuck-mgo /usr/bin/
 gopath/bin/hockeypuck-load /usr/bin/
-etc/hockeypuck/hockeypuck.conf /etc/hockeypuck
-etc/init/hockeypuck-mgo.conf /etc/init
-man/man1/hockeypuck-mgo.1 /usr/share/man/man1
-man/man1/hockeypuck-load.1 /usr/share/man/man1
-www /var/lib/hockeypuck
+instroot/etc/hockeypuck/hockeypuck.conf /etc/hockeypuck
+instroot/etc/init/hockeypuck-mgo.conf /etc/init
+instroot/usr/share/man/man1/hockeypuck-mgo.1 /usr/share/man/man1
+instroot/usr/share/man/man1/hockeypuck-load.1 /usr/share/man/man1
+instroot/var/lib/hockeypuck/www /var/lib/hockeypuck
